More refactoring towards testing.